c4prj2_input/grade.txt
Grading at Fri Apr  9 08:55:33 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:22:5: error: break statement not within loop or switch
     break;
     ^
Compilation of future.c failed

Overall Grade: F
